@@ -1,3 +1,8 @@
+2002-08-07  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf64-ppc.c (edit_opd): Arrange to drop symbols for discarded .opd
+	entries.
+
 2002-08-07  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>
 
 	* elfxx-mips.c (mips_elf_create_dynamic_relocation): Cast signedness
